--- a/picknroll/src/main/webapp/resources/css/market/style.css
+++ b/picknroll/src/main/webapp/resources/css/market/style.css
@@ -5,8 +5,25 @@
 }
 
 .use-check{
-	position: absolute;
+	box-shadow: inset 0px 0px 0px 0px #ffffff;
+    background-blend-mode: lighten;
+    background-color: rgba(0,0,0,0);
+    border-radius: 0px;
+    padding: 5px 10px;
+    margin: 8px 1px;  
+    border-radius: 0px;
+    background: #fff;
+    border: 1px solid #000;
+    color: #000;
+    box-sizing: border-box;
+    margin: 1;
+    cursor: pointer; 
+    text-align: center;
+    position: absolute;
 	right: 0px;
-	width: 20px;
-	height: 20px; 
+}
+
+.use-check.check{
+	background-color: #000;
+    color: #fff;
 }
