--- a/picknroll/src/main/webapp/resources/css/style.css
+++ b/picknroll/src/main/webapp/resources/css/style.css
@@ -118,6 +118,7 @@ body {
 	display: flex;
 }
 
+
 .flex-center{
 	justify-content: center;
     align-items: center;
@@ -143,11 +144,17 @@ body {
 }
 
 .photo{
-	width:96px;
-	height:96px;
+	width:100px;
+	height:100px;
+	object-fit: cover;
+	border-radius: 30px;
 }
 
-
+.margin-left{
+	
+	margin-left: 10px;
+	
+}
 
 /*----------input-box------------*/
 .text-input{
@@ -247,3 +254,15 @@ body {
 	    color: #ccc; 
 	    font-size: small; 
 	}
+	
+/*------미디어쿼리-----------------------------------*/
+@media screen and (min-width:1000px) {
+
+  .main-container{
+  	margin-top : 10px;
+	margin-left : auto; 
+	margin-right: auto;
+	padding : 0% 15%;
+  }
+  
+}
